<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/common_elevation"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/profile_card_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/common_element_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:scaleType="fitStart" />

    <TextView
        android:id="@+id/profile_card_name"
        android:layout_below="@+id/profile_card_image"
        android:layout_marginTop="@dimen/common_element_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/large_title_text_size"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/represent_red" />

    <TextView
        android:id="@+id/profile_card_position"
        android:layout_below="@+id/profile_card_name"
        android:layout_marginTop="@dimen/common_element_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:textSize="@dimen/large_body_text_size"
        android:layout_width="match_parent"
        android:textColor="@color/text_dark_gray"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_card_position_label"
        android:layout_below="@+id/profile_card_position"
        android:layout_marginTop="@dimen/label_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_body_text_size"
        android:textColor="@color/text_medium_gray"
        android:text="@string/position_label_text" />

    <TextView
        android:id="@+id/profile_card_party"
        android:layout_below="@+id/profile_card_position_label"
        android:layout_marginTop="@dimen/common_element_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_body_text_size"
        android:textColor="@color/text_dark_gray" />

    <TextView
        android:id="@+id/profile_card_party_label"
        android:layout_below="@+id/profile_card_party"
        android:layout_marginTop="@dimen/label_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_body_text_size"
        android:textColor="@color/text_medium_gray"
        android:text="@string/party_label_text"/>

    <TextView
        android:id="@+id/profile_card_end_date"
        android:layout_below="@+id/profile_card_party_label"
        android:layout_marginTop="@dimen/common_element_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_body_text_size"
        android:textColor="@color/text_dark_gray" />

    <TextView
        android:id="@+id/profile_card_end_date_label"
        android:layout_below="@+id/profile_card_end_date"
        android:layout_marginBottom="@dimen/common_element_spacing"
        android:layout_marginTop="@dimen/label_spacing"
        android:layout_marginLeft="@dimen/common_element_spacing"
        android:layout_marginRight="@dimen/common_element_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_body_text_size"
        android:textColor="@color/text_medium_gray"
        android:text="@string/end_date_label_text" />


    <ImageView
        android:id="@+id/profile_card_website"
        android:layout_below="@+id/profile_card_end_date_label"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="@dimen/common_element_spacing"
        android:layout_marginRight="20dp"
        android:src="@drawable/web" />

    <ImageView
        android:id="@+id/profile_card_email"
        android:layout_below="@+id/profile_card_end_date_label"
        android:layout_toLeftOf="@id/profile_card_website"
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginBottom="@dimen/common_element_spacing"
        android:src="@drawable/email" />

</RelativeLayout>
